a bit of styling

--- a/13_newsletter/test.html
+++ b/13_newsletter/test.html
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="banner">
                 <span class="banner-text">Surprise</span>
-                <span class="banner-text">Nigger</span>
+                <span class="banner-text">YAY</span>
             </div>
             
             <span class="card__title">LESSS GOOO</span>
